# aws-oidc-bootstrap

./: .gitignore  Makefile  ansible.cfg  playbook.yml  pyproject.toml  requirements.yml
group_vars/: all.yml  local.yml.example
tasks/: create_oidc_provider.yml  create_oidc_roles.yml  get_aws_identity.yml  get_oidc_provider.yml
templates/: pulumi_infra_policy.json.j2  pulumi_infra_role.json.j2
